--- a/.github/workflows/terraform-apply-master-merge.yml
+++ b/.github/workflows/terraform-apply-master-merge.yml
@@ -2,6 +2,8 @@
 name: 'Terraform apply master merge'
 on:
   pull_request:
+    paths-ignore:
+      - '.github/workflows/**' # workflowsの更新時はActionsの発火除外。 https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#onpushpull_requestpaths
     branches:
       - main
     types: [closed]
